# cum

./: .gitignore  AST.md  CMakeLists.txt  Config.cmake.in  README.md  generate_cpp.py  package.json  pyproject.toml  sample.cum  sample.hpp  sample2.cpp  sample2.cum  sample2.hpp
cum/: cum.hpp
cum_tools/: __init__.py  __main__.py  cli.py  codegen_sample2.py  repo.py
generator/: ast_normalize.py  ast_to_cpp.py  ast_to_js.py  ast_to_py.py  ast_to_wslua.py  cpp_generator.py  cum_to_ast.py  generate_cpp.py  optimize_svg_logo.py
src/cum/: cum.hpp
target_cpp/test/: CMakeLists.txt  sample2.hpp
target_js/cum/: cum.mjs
target_js/scripts/: codegen-sample2.mjs
target_js/test/: sample2.mjs  sample2.test.mjs
target_py3/cum/: __init__.py  cum.py
target_py3/test/: sample2.py  sample2_test.py
target_wslua/test/: sample2.lua
